# iSDF

./: .gitignore  .gitmodules  README.md  environment.yml  setup.py
.github/: CONTRIBUTING.md
data/: README.md  download_apt_2_nav.sh  download_data.sh  download_franka.sh
isdf/: CMakeLists.txt  package.xml
isdf/datasets/: __init__.py  data_util.py  dataset.py  image_transforms.py  realsense_franka_data_gen.py  replicaCAD_gt_sdf.py  sdf_util.py
isdf/eval/: __init__.py  eval_pts.py  metrics.py  plot_utils.py
isdf/eval/figs/: all_seq.py  per_seq.py  slices.py
isdf/geometry/: __init__.py  frustum.py  transform.py
isdf/launch/: train.launch  train_franka.launch
isdf/modules/: __init__.py  embedding.py  fc_map.py  loss.py  render.py  sample.py  trainer.py
isdf/ros_utils/: __init__.py  node.py
isdf/train/: ramp.py  train.py  train_vis.py
isdf/train/batch_train/: __init__.py  batch_utils.py  jobs_local.py
isdf/train/configs/: realsense.json  realsense_franka.json  realsense_franka_offline.json  realsense_franka_offline1.json  replicaCAD.json  scannet.json
isdf/visualisation/: __init__.py  display.py  draw.py  draw3D.py  isdf_window.py  sdf_viewer.py
results/iSDF/exp0/apt_2_mnp_0/: config.json  vox_res.json
results/iSDF/exp0/apt_2_mnp_1/: vox_res.json
results/iSDF/exp0/apt_2_mnp_2/: vox_res.json
results/iSDF/exp0/apt_2_mnp_3/: vox_res.json
results/iSDF/exp0/apt_2_mnp_4/: vox_res.json
results/iSDF/exp0/apt_2_mnp_5/: vox_res.json
results/iSDF/exp0/apt_2_mnp_6/: vox_res.json
results/iSDF/exp0/apt_2_mnp_7/: vox_res.json
results/iSDF/exp0/apt_2_mnp_8/: vox_res.json
results/iSDF/exp0/apt_2_mnp_9/: vox_res.json
results/iSDF/exp0/apt_2_nav_0/: vox_res.json
results/iSDF/exp0/apt_2_nav_1/: config.json  vox_res.json
results/iSDF/exp0/apt_2_nav_2/: vox_res.json
results/iSDF/exp0/apt_2_nav_3/: vox_res.json
results/iSDF/exp0/apt_2_nav_4/: vox_res.json
results/iSDF/exp0/apt_2_nav_5/: vox_res.json
results/iSDF/exp0/apt_2_nav_6/: vox_res.json
(+110 files in other folders)
